# org.muhkuh.lua-papa-schlumpf-flex

./: .editorconfig  .gitignore  CMakeLists.txt  Jenkinsfile  SConstruct  build_artifact.py  dependency-log-lua5.1.xml  dependency-log-lua5.4.xml  setup.xml
.github/workflows/: main.yml
jonchki/: cli_args.py  install.py  jonchkicfg.xml  jonchkihere.py
lua/: papa_schlumpf_flex.lua
lua/papa_schlumpf/: plugin.lua
plugin/: CMakeLists.txt  muhkuh_typemaps.i  papa_schlumpf.cpp  papa_schlumpf.h  papa_schlumpf.i  papa_schlumpf_device.cpp  papa_schlumpf_device.h
plugin/installer/lua5.1/: install_linux.lua  install_windows.lua  papa-schlumpf-flex.xml
plugin/installer/lua5.4/: papa-schlumpf-flex.xml
plugin/linux/udev/: 40-hilscher_papa_schlumpf.rules
src/: defines.h  header.c  init.S  main.c  main.h  netx500.ld  pci.c  pci.h  pci_plx.h  pcie_test.c  pcie_test.h  uprintf_buffer.c  uprintf_buffer.h
src/common/: papa_schlumpf_firmware_interface.h
src/usb_emsys/: usb.c  usb.h  usb_command_execution.c  usb_command_execution.h  usb_descriptors.c  usb_descriptors.h  usb_globals.c  usb_globals.h  usb_io.c  usb_main.c  usb_requests_top.c
src_communication/: init.S  mailbox.c  mailbox.h  main.c  monitor.c  monitor.h  monitor_commands.h  netx500.ld  ringbuffer.c  ringbuffer.h
test/: SRC_DPM0xSRC_SER.img  lua5.1  muhkuh_cli_init.lua  netX90_NXJTAG-4000-USB_activate_SPM.tcl  run  test.lua
test/lua/: papa_schlumpf_flex.lua
